--- a/style/index.css
+++ b/style/index.css
@@ -51,7 +51,7 @@ table {
 
 *{
     box-sizing: border-box;
-    /*border: 1px solid gray;*/
+    border: 1px solid gray;
     max-width: 100%;
 }
 
@@ -70,6 +70,8 @@ body {
 h1 {
     font-family: 'Chelsea Market', cursive;
     font-size: 5rem;
+    padding: 1%;
+    width: 100%;
 }
 
 section {
@@ -79,3 +81,91 @@ section {
 }
 
 /*header section styles */
+
+header {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: lightgrey;
+}
+
+nav {
+    padding: 2%;
+    width: 100%;
+}
+
+nav a {
+    display: inline-block;
+    padding: 1% 2%;
+    text-decoration: none;
+    color: black;
+}
+
+/*main section styles*/
+
+.main {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-around;
+    justify-content: space-around;
+    margin: -5px 0;
+    padding: 0 5px;
+}
+
+.imageContainer {
+    width: 47%;
+    margin: 5px 0;
+}
+
+.introContainer {
+    width: 47%;
+    margin: 5px 0;
+    display: flex;
+    flex-direction: column;
+    text-align: center;   
+    justify-content: space-evenly; 
+}
+
+.introContainer a {
+    display: inline-block;
+    padding: 1% 2%;
+    text-decoration: none;
+    color: black;
+}
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: space-around;
+    width: 100%;
+    margin: 5px 0;
+}
+
+.galleryItem {
+    width: 22%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 1%;
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: lightgrey;
+    padding: 4%;
+}
+
+footer a {
+    display: inline-block;
+    margin: 1%;
+    padding: 1% 2%;
+    text-decoration: none;
+    color: black;
+}
+
+a:hover{
+    color: white;
+    background-color: black;
+}
